[workspace]
members         = ["uncore", "copycat", "sanity", "coreba"]
resolver        = "2"

[workspace.package]
authors         = ["Christos P. Lamprakos <cplamprakos@proton.me>"]
edition         = "2021"
rust-version    = "1.82.0"
license         = "MIT"
publish         = false
version         = "0.1.0"

[profile.release]
lto             = true
codegen-units   = 1
debug           = true

[workspace.dependencies]
indexmap                = "2.7.0"
libc                    = "0.2"
libc-stdhandle          = "0.1"
once_cell               = "1.18.0"
ahash                   = "0.8.3"
anyhow                  = "1.0.75"
rayon                   = "1.10.0"
thiserror               = "1.0.64"
rand                    = "0.8.5"
itertools               = "0.13.0"
plotters                = "0.3.7"
clap                    = {version = "4.5.23", features = ["derive"]}
